// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseAndTypecheckPerseusItem correctly parses data/categorizer-missing-static.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
  },
  "hints": [],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "

[[☃ categorizer 1]]",
    "images": {},
    "metadata": undefined,
    "widgets": {
      "categorizer 1": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "categories": [
            "one",
            "two",
            "three",
          ],
          "highlightLint": undefined,
          "items": [
            "this",
            "that",
            "other",
          ],
          "linterContext": undefined,
          "randomizeItems": true,
          "static": false,
          "values": [],
        },
        "static": undefined,
        "type": "categorizer",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
    },
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/dropdown-missing-version.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
  },
  "hints": [
    {
      "content": "While the Articles of Confederation did not provide for a federal executive, delegates to the Continental Congress did elect a president.",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
  ],
  "itemDataVersion": undefined,
  "question": {
    "content": "**Under the Articles of Confederation[[☃ dropdown 1]] chose the president of the United States.** ",
    "images": {},
    "metadata": undefined,
    "widgets": {
      "dropdown 1": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "choices": [
            {
              "content": "state legislatures",
              "correct": false,
            },
            {
              "content": "delegates to the Continental Congress",
              "correct": true,
            },
            {
              "content": "the people",
              "correct": false,
            },
          ],
          "placeholder": "",
          "static": false,
        },
        "static": undefined,
        "type": "dropdown",
        "version": undefined,
      },
    },
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/hint-missing-images.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
    "chi2Table": false,
    "periodicTable": false,
    "tTable": false,
    "zTable": false,
  },
  "hints": [
    {
      "content": "##Scaling equations to solve systems of equations with elimination

###What is it, and why is it useful?

The elimination strategy is a popular method for mathematicians who like working with integers. When the coefficients of a variable are already opposites,  we can just add the equations to get a new equation without that variable. Otherwise, we may want to multiply both sides of one equation (or both) by a constant so that we do get opposite coefficients.

###Practice

If you haven't practiced [Systems of equations with elimination](/e/systems_of_equations_with_elimination_0.5?getready=pre) yet, we suggest you do that first.



[[☃ graded-group-set 2]]

For more practice, go to [Systems of equations with elimination challenge](/e/systems_of_equations_with_elimination?getready=post).",
      "images": {},
      "metadata": undefined,
      "replace": false,
      "widgets": {
        "graded-group-set 2": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "gradedGroups": [
              {
                "content": "**Solve the system of equations.**

$\\begin{align}
&-5x-3y +9 =0
\\\\\\\\
&4x-18y-14=0
\\end{align}$

$x=$ [[☃ numeric-input 1]]

$y=$ [[☃ numeric-input 2]]",
                "hasHint": undefined,
                "hint": {
                  "content": "Let's solve the system by using the *elimination method.* In order to eliminate one of the variables, we need to manipulate the equations so that variable has coefficients of the same size but opposite signs in each equation.

Let's take a look at the system:

$\\begin{align}
&-5x-3y + 9=0
\\\\\\\\
&4x-18y-14=0
\\end{align}$

The coefficient of $y$ in the second equation, $-18$, is exactly $6$ times the coefficient of $y$ in the first equation, $-3$. Therefore, we can multiply the first equation by $\\purpleD{-6}$ in order to eliminate $y$.

$\\begin{align} \\purpleD{-6}\\cdot(-5x)-(\\purpleD{-6})\\cdot3y+(\\purpleD{-6})\\cdot 9&=(\\purpleD{-6})\\cdot0\\\\\\\\
30x+18y-54&=0\\end{align}$

Now we can eliminate $y$ as follows:

$\\begin{align} {30x}+\\maroonD{18y} -54&=0 \\\\\\\\
\\underline{{}\\tealE{+}
\\left({4x}-\\maroonD{18y}-14\\right)}&=\\underline{{}\\tealE{+}0}\\\\
34x-0 -68&=0\\end{align}$

When we solve the resulting equation we obtain that $x = 2$. Then, we can substitute this into one of the original equations and solve for $y$ to obtain $y=-\\dfrac{1}{3}$.

This is the solution of the system:

$\\begin{align}
&x=2
\\\\\\\\
&y=-\\dfrac{1}{3}
\\end{align}$",
                  "images": {},
                  "metadata": undefined,
                  "widgets": {},
                },
                "images": {},
                "immutableWidgets": false,
                "title": "Problem 1.1",
                "widgetEnabled": true,
                "widgets": {
                  "numeric-input 1": {
                    "alignment": "default",
                    "graded": true,
                    "key": undefined,
                    "options": {
                      "answerForms": undefined,
                      "answers": [
                        {
                          "answerForms": undefined,
                          "maxError": null,
                          "message": "",
                          "simplify": "required",
                          "status": "correct",
                          "strict": false,
                          "value": 2,
                        },
                      ],
                      "coefficient": false,
                      "labelText": "value of x",
                      "multipleNumberInput": false,
                      "rightAlign": false,
                      "size": "small",
                      "static": false,
                    },
                    "static": false,
                    "type": "numeric-input",
                    "version": {
                      "major": 0,
                      "minor": 0,
                    },
                  },
                  "numeric-input 2": {
                    "alignment": "default",
                    "graded": true,
                    "key": undefined,
                    "options": {
                      "answerForms": undefined,
                      "answers": [
                        {
                          "answerForms": [
                            "proper",
                            "improper",
                          ],
                          "maxError": null,
                          "message": "",
                          "simplify": "required",
                          "status": "correct",
                          "strict": false,
                          "value": -0.3333333333333333,
                        },
                      ],
                      "coefficient": false,
                      "labelText": "value of y",
                      "multipleNumberInput": false,
                      "rightAlign": false,
                      "size": "small",
                      "static": false,
                    },
                    "static": false,
                    "type": "numeric-input",
                    "version": {
                      "major": 0,
                      "minor": 0,
                    },
                  },
                },
              },
              {
                "content": "**Solve the system of equations.**

$\\begin{align}
&9x-5y = -55
\\\\\\\\
&-7x+8y=51
\\end{align}$

$x=$ [[☃ numeric-input 1]]

$y=$ [[☃ numeric-input 2]]",
                "hasHint": undefined,
                "hint": {
                  "content": "Let's solve the system by using the *elimination method.* In order to eliminate one of the variables, we need to manipulate the equations so that variable has coefficients of the same size but opposite signs in each equation.

Let's take a look at the system:

$\\begin{align}
&9x-5y = -55
\\\\\\\\
&-7x+8y=51
\\end{align}$

Since the coefficients of either variable aren't multiples of each other, we must multiply both equations in order to eliminate a variable of our choice. Let's eliminate $y$.

Since the *least common multiple* of the coefficients of $y$ in the two equations is $-40$, we can *multiply* the first equation by $\\purpleD{8}$ and the second equation by $\\tealE{5}$ in order to eliminate $y$.

$ \\begin{align}\\purpleD{8}\\cdot9x-\\purpleD{8}\\cdot5y&=\\purpleD{8}\\cdot(-55)\\\\\\\\
72x-40y&=-440\\end{align}$

$ \\begin{align} \\tealE{5}\\cdot(-7x)+\\tealE{5}\\cdot8y&=\\tealE{5}\\cdot 51\\\\\\\\
-35x+40y&=255\\end{align}$

Now we can eliminate $y$ as follows:

$\\begin{align} {72x}-\\maroonD{40y} &= -440 \\\\\\\\
\\underline{{}\\blueE{+}
{-35x}+\\maroonD{40y}}&=\\underline{{}\\blueE{+}255}\\\\\\\\
37x-0 &=-185\\end{align}$

When we solve the resulting equation we obtain that $x = -5$. Then, we can substitute this into one of the original equations and solve for $y$ to obtain $y=2$.",
                  "images": {},
                  "metadata": undefined,
                  "widgets": {},
                },
                "images": {},
                "immutableWidgets": false,
                "title": "Problem 1.2",
                "widgetEnabled": true,
                "widgets": {
                  "numeric-input 1": {
                    "alignment": "default",
                    "graded": true,
                    "key": undefined,
                    "options": {
                      "answerForms": undefined,
                      "answers": [
                        {
                          "answerForms": undefined,
                          "maxError": null,
                          "message": "",
                          "simplify": "required",
                          "status": "correct",
                          "strict": false,
                          "value": -5,
                        },
                      ],
                      "coefficient": false,
                      "labelText": "value of x",
                      "multipleNumberInput": false,
                      "rightAlign": false,
                      "size": "small",
                      "static": false,
                    },
                    "static": false,
                    "type": "numeric-input",
                    "version": {
                      "major": 0,
                      "minor": 0,
                    },
                  },
                  "numeric-input 2": {
                    "alignment": "default",
                    "graded": true,
                    "key": undefined,
                    "options": {
                      "answerForms": undefined,
                      "answers": [
                        {
                          "answerForms": undefined,
                          "maxError": null,
                          "message": "",
                          "simplify": "required",
                          "status": "correct",
                          "strict": false,
                          "value": 2,
                        },
                      ],
                      "coefficient": false,
                      "labelText": "value of y",
                      "multipleNumberInput": false,
                      "rightAlign": false,
                      "size": "small",
                      "static": false,
                    },
                    "static": false,
                    "type": "numeric-input",
                    "version": {
                      "major": 0,
                      "minor": 0,
                    },
                  },
                },
              },
            ],
          },
          "static": false,
          "type": "graded-group-set",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
    {
      "content": "##Why wasn't this exercise part of the strategic supplement course?

It is possible to solve any system of linear equations using the substitution method as long as you're comfortable working with fractions in your equations.",
      "images": {},
      "metadata": undefined,
      "replace": false,
      "widgets": {},
    },
  ],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "Congratulations on all you've learned about systems of equations!

Our strategic supplement version of algebra 1 is for students who are getting classroom instruction in algebra and only using Khan Academy for a short time each week. We only included select exercises, videos, and articles to help you focus your limited time.

In case you would like a fuller experience, here is a taste of a skill you can learn in our full algebra 1 course.",
    "images": {},
    "metadata": undefined,
    "widgets": {},
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/iframe-missing-static.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
    "periodicTable": false,
  },
  "hints": [
    {
      "content": "This is a hint... with a video!

[[☃ iframe 1]]",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {
        "iframe 1": {
          "alignment": undefined,
          "graded": true,
          "key": undefined,
          "options": {
            "allowFullScreen": true,
            "allowTopNavigation": undefined,
            "height": "235",
            "settings": [
              {
                "name": "",
                "value": "",
              },
            ],
            "static": false,
            "url": "https://www.youtube.com/embed/qYD5iwhLzm8?enablejsapi=1&wmode=transparent&modestbranding=1&rel=0&frameborder='0'",
            "width": "425",
          },
          "static": undefined,
          "type": "iframe",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
  ],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "This is a question.",
    "images": {},
    "metadata": undefined,
    "widgets": {},
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/interactive-graph-with-string-backgroundImage-left.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
    "chi2Table": false,
    "periodicTable": false,
    "tTable": false,
    "zTable": false,
  },
  "hints": [],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "Ally is excited to compete in a $6$-mile race. The race organizers plotted the course on a coordinate map. The starting point is at $(4,3)$, and the ending point is at $(4,9)$.  Ally's family decides to stand at $(4,6)$ on the map.

**Plot the starting point, ending point, and place where Ally's family stands on the map.**

[[☃ interactive-graph 1]]

**How far along will Ally be in the race when she reaches her family?**  
[[☃ radio 1]]",
    "images": {},
    "metadata": undefined,
    "widgets": {
      "interactive-graph 1": {
        "alignment": "default",
        "graded": true,
        "key": undefined,
        "options": {
          "backgroundImage": {
            "bottom": 4,
            "height": 0,
            "left": 0,
            "scale": 1,
            "top": undefined,
            "url": "",
            "width": 0,
          },
          "correct": {
            "coord": undefined,
            "coords": [
              [
                4,
                3,
              ],
              [
                4,
                6,
              ],
              [
                4,
                9,
              ],
            ],
            "numPoints": 3,
            "startCoords": undefined,
            "type": "point",
          },
          "fullGraphAriaDescription": undefined,
          "fullGraphLabel": undefined,
          "graph": {
            "coord": undefined,
            "coords": undefined,
            "numPoints": 3,
            "startCoords": undefined,
            "type": "point",
          },
          "gridStep": [
            1,
            1,
          ],
          "labels": [
            "x",
            "y",
          ],
          "lockedFigures": undefined,
          "markings": "graph",
          "range": [
            [
              -1,
              10,
            ],
            [
              -1,
              10,
            ],
          ],
          "rulerLabel": "",
          "rulerTicks": 10,
          "showProtractor": false,
          "showRuler": false,
          "showTooltips": false,
          "snapStep": [
            0.5,
            0.5,
          ],
          "step": [
            1,
            1,
          ],
        },
        "static": false,
        "type": "interactive-graph",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
      "radio 1": {
        "alignment": "default",
        "graded": true,
        "key": undefined,
        "options": {
          "choices": [
            {
              "clue": undefined,
              "content": "Less than halfway through the race",
              "correct": false,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
            {
              "clue": undefined,
              "content": "Halfway through the race",
              "correct": true,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
            {
              "clue": undefined,
              "content": "More than halfway through the race",
              "correct": undefined,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
          ],
          "countChoices": false,
          "deselectEnabled": false,
          "displayCount": null,
          "hasNoneOfTheAbove": false,
          "multipleSelect": false,
          "noneOfTheAbove": undefined,
          "onePerLine": undefined,
          "randomize": false,
        },
        "static": false,
        "type": "radio",
        "version": {
          "major": 1,
          "minor": 0,
        },
      },
    },
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/item-missing-answerArea.json 1`] = `
{
  "_multi": {
    "blurb": {
      "__type": "content",
      "content": "",
      "images": {},
      "widgets": {},
    },
    "hints": [],
    "question": {
      "__type": "content",
      "content": "",
      "widgets": {},
    },
  },
  "answer": undefined,
  "answerArea": {},
  "hints": [],
  "itemDataVersion": undefined,
  "question": {
    "content": "",
    "images": {},
    "widgets": {},
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/matrix-missing-version.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
  },
  "hints": [
    {
      "content": "The inverse of a matrix is equal to the adjugate of the matrix divided by the determinant of the matrix.

 $ \\textbf A^{-1} = \\frac{1}{det(\\textbf A)}adj(\\textbf A) $",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
    {
      "content": "**Step 1: Find the adjugate**

 First, compute the matrix of minors of $\\textbf A$.

 $ \\left[\\begin{array}{rrr}\\left|\\begin{array}{rr}1 & 1 \\\\ 1 & 1\\end{array}\\right| & \\left|\\begin{array}{rr}0 & 1 \\\\ 1 & 1\\end{array}\\right| & \\left|\\begin{array}{rr}0 & 1 \\\\ 1 & 1\\end{array}\\right| \\\\ \\left|\\begin{array}{rr}0 & 1 \\\\ 1 & 1\\end{array}\\right| & \\left|\\begin{array}{rr}2 & 1 \\\\ 1 & 1\\end{array}\\right| & \\left|\\begin{array}{rr}2 & 0 \\\\ 1 & 1\\end{array}\\right| \\\\ \\left|\\begin{array}{rr}0 & 1 \\\\ 1 & 1\\end{array}\\right| & \\left|\\begin{array}{rr}2 & 1 \\\\ 0 & 1\\end{array}\\right| & \\left|\\begin{array}{rr}2 & 0 \\\\ 0 & 1\\end{array}\\right|\\end{array}\\right] = \\left[\\begin{array}{rrr}0 & -1 & -1 \\\\ -1 & 1 & 2 \\\\ -1 & 2 & 2\\end{array}\\right] $",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
    {
      "content": "Next, multiply the elements of the matrix of minors by the following pattern: 

 $\\left[\\begin{array}{rrr}+ & - & + \\\\ - & + & - \\\\ + & - & +\\end{array}\\right]$ This gives us what is called the matrix of cofactors:

 $ \\left[\\begin{array}{rrr}0 & 1 & -1 \\\\ 1 & 1 & -2 \\\\ -1 & -2 & 2\\end{array}\\right] $",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
    {
      "content": "Next, transpose the matrix of cofactors to get the adjugate.

 $ adj(\\textbf A) = \\left[\\begin{array}{rrr}0 & 1 & -1 \\\\ 1 & 1 & -2 \\\\ -1 & -2 & 2\\end{array}\\right]^T = \\left[\\begin{array}{rrr}\\color{\\#6495ED}{0} & \\color{\\#6495ED}{1} & \\color{\\#6495ED}{-1} \\\\ \\color{\\#6495ED}{1} & \\color{\\#6495ED}{1} & \\color{\\#6495ED}{-2} \\\\ \\color{\\#6495ED}{-1} & \\color{\\#6495ED}{-2} & \\color{\\#6495ED}{2}\\end{array}\\right] $",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
    {
      "content": "**Step 2: Find the determinant**

 Compute the determinant of the original matrix.

  $ det(\\textbf A) = \\left|\\begin{array}{rrr}2 & 0 & 1 \\\\ 0 & 1 & 1 \\\\ 1 & 1 & 1\\end{array}\\right|= \\color{\\#DF0030}{-1} $",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
    {
      "content": "**Step 3: Put it all together**

 Now that we have both the determinant and the adjugate, we can compute the inverse.

 $ \\textbf A^{-1} = \\frac{1}{\\color{\\#DF0030}{-1}} \\left[\\begin{array}{rrr}\\color{\\#6495ED}{0} & \\color{\\#6495ED}{1} & \\color{\\#6495ED}{-1} \\\\ \\color{\\#6495ED}{1} & \\color{\\#6495ED}{1} & \\color{\\#6495ED}{-2} \\\\ \\color{\\#6495ED}{-1} & \\color{\\#6495ED}{-2} & \\color{\\#6495ED}{2}\\end{array}\\right] $",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
    {
      "content": "$ = \\left[\\begin{array}{rrr}0 & -1 & 1 \\\\ -1 & -1 & 2 \\\\ 1 & 2 & -2\\end{array}\\right]$",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
  ],
  "itemDataVersion": undefined,
  "question": {
    "content": "$\\textbf A = \\left[\\begin{array}{rrr}2 & 0 & 1 \\\\ 0 & 1 & 1 \\\\ 1 & 1 & 1\\end{array}\\right]$

 ** What is $\\textbf A^{-1}$? **

[[☃ matrix 1]]",
    "images": {},
    "metadata": undefined,
    "widgets": {
      "matrix 1": {
        "alignment": undefined,
        "graded": undefined,
        "key": undefined,
        "options": {
          "answers": [
            [
              0,
              -1,
              1,
            ],
            [
              -1,
              -1,
              2,
            ],
            [
              1,
              2,
              -2,
            ],
          ],
          "cursorPosition": undefined,
          "matrixBoardSize": [
            3,
            3,
          ],
          "prefix": undefined,
          "static": undefined,
          "suffix": undefined,
        },
        "static": undefined,
        "type": "matrix",
        "version": undefined,
      },
    },
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/orderer-option-missing-images.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
    "chi2Table": false,
    "periodicTable": false,
    "tTable": false,
    "zTable": false,
  },
  "hints": [
    {
      "content": "##Decomposing fractions into unit fractions

To **decompose** a number, we break it into smaller parts.
[[☃ explanation 1]]

A **unit fraction** is a fraction with a numerator of $1$. [[☃ explanation 2]]",
      "images": {},
      "metadata": undefined,
      "replace": false,
      "widgets": {
        "explanation 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "We can decompose $54$ into $50+4$.",
            "hidePrompt": "Okay, got it",
            "showPrompt": "Show me an example",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "explanation 2": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "$\\dfrac15$ is a unit fraction because the numerator (top number) is $1$.",
            "hidePrompt": "Okay, got it",
            "showPrompt": "Show me an example",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
    {
      "content": "###Example 1: Tape diagram

Let's decompose $\\dfrac59$ into unit fractions.

![](web+graphie://ka-perseus-graphie.s3.amazonaws.com/a65a2cd2728b1fa6a12775cdfd353559f99d6582)




[[☃ graded-group 1]]

[[☃ explanation 1]]",
      "images": {
        "web+graphie://ka-perseus-graphie.s3.amazonaws.com/a65a2cd2728b1fa6a12775cdfd353559f99d6582": {
          "height": 30,
          "width": 400,
        },
      },
      "metadata": undefined,
      "replace": false,
      "widgets": {
        "explanation 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "

![](web+graphie://ka-perseus-graphie.s3.amazonaws.com/bcf2a7df34a1d6994e7ed3c7120cc98f1e5c0aa8)

$\\dfrac59$ can be broken up into $\\dfrac19+\\dfrac19+\\dfrac19+\\dfrac19+\\dfrac19$.",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**Drag the cards to create an expression that is equivalent to $\\dfrac59$.**

[[☃ orderer 1]]",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "orderer 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "correctOptions": [
                    {
                      "content": "$\\dfrac19$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac19$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac19$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac19$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac19$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                  ],
                  "height": "normal",
                  "layout": "horizontal",
                  "options": [
                    {
                      "content": "$\\dfrac19$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                  ],
                  "otherOptions": [],
                },
                "static": false,
                "type": "orderer",
                "version": {
                  "major": 0,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
    {
      "content": "###Example 2: Fraction model

How can we decompose $\\dfrac38$?

![](web+graphie://ka-perseus-graphie.s3.amazonaws.com/36325871333a2a9bdd2918c6b87d9104758c95e3)

[[☃ graded-group 1]]

[[☃ explanation 1]]",
      "images": {
        "web+graphie://ka-perseus-graphie.s3.amazonaws.com/36325871333a2a9bdd2918c6b87d9104758c95e3": {
          "height": 90,
          "width": 96,
        },
        "web+graphie://ka-perseus-graphie.s3.amazonaws.com/7165c486a581fb615a85de15378d40b81b266a20": {
          "height": 96,
          "width": 96,
        },
      },
      "metadata": undefined,
      "replace": false,
      "widgets": {
        "explanation 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "$\\dfrac18+\\dfrac18+\\dfrac18$

![](web+graphie://ka-perseus-graphie.s3.amazonaws.com/7165c486a581fb615a85de15378d40b81b266a20)",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**Write an expression decomposing $\\dfrac38$ into unit fractions.**



[[☃ expression 1]]

",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "expression 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "answerForms": [
                    {
                      "considered": "correct",
                      "form": true,
                      "key": "0",
                      "simplify": false,
                      "value": "\\frac{1}{8}+\\frac{1}{8}+\\frac{1}{8}",
                    },
                  ],
                  "ariaLabel": undefined,
                  "buttonSets": [
                    "basic",
                  ],
                  "buttonsVisible": undefined,
                  "functions": [
                    "f",
                    "g",
                    "h",
                  ],
                  "times": true,
                  "visibleLabel": undefined,
                },
                "static": false,
                "type": "expression",
                "version": {
                  "major": 1,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
    {
      "content": "###Example 3: Number line

How can we decompose $\\dfrac64$?

![](web+graphie://ka-perseus-graphie.s3.amazonaws.com/7ebb22693e18c660e133351a0f6e4acd6678e871)

[[☃ graded-group 1]]

[[☃ explanation 1]]",
      "images": {
        "web+graphie://ka-perseus-graphie.s3.amazonaws.com/7ebb22693e18c660e133351a0f6e4acd6678e871": {
          "height": 116,
          "width": 410,
        },
      },
      "metadata": undefined,
      "replace": false,
      "widgets": {
        "explanation 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "$\\dfrac14+\\dfrac14+\\dfrac14+\\dfrac14+\\dfrac14+\\dfrac14$",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**Drag the cards to create an expression that is equivalent to $\\dfrac64$.**

[[☃ orderer 1]]

",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "orderer 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "correctOptions": [
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                  ],
                  "height": "normal",
                  "layout": "horizontal",
                  "options": [
                    {
                      "content": "$\\dfrac14$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                    {
                      "content": "$+$",
                      "images": {},
                      "metadata": undefined,
                      "widgets": {},
                    },
                  ],
                  "otherOptions": [],
                },
                "static": false,
                "type": "orderer",
                "version": {
                  "major": 0,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
    {
      "content": "##Let's try a few more.

###Problem 1

[[☃ graded-group 1]]

[[☃ explanation 1]]



###Problem 2

[[☃ graded-group 2]]

[[☃ explanation 2]]


###Problem 3

[[☃ graded-group 3]]

[[☃ explanation 3]]


###Problem 4

[[☃ graded-group 4]]

[[☃ explanation 4]]",
      "images": {},
      "metadata": undefined,
      "replace": false,
      "widgets": {
        "explanation 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "$\\dfrac29=\\dfrac19+\\dfrac19$",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "explanation 2": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "$\\dfrac13+\\dfrac13+\\dfrac13+\\dfrac13+\\dfrac13$",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "explanation 3": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "$\\dfrac16+\\dfrac16+\\dfrac16+\\dfrac16+\\dfrac16=\\dfrac56$
",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "explanation 4": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "explanation": "

Fraction | Solution
- | - | -
$\\dfrac42$ | $\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12$
$\\dfrac34$ | $\\dfrac14+\\dfrac14+\\dfrac14$
$\\dfrac23$ | $\\dfrac13+\\dfrac13$",
            "hidePrompt": "Hide solution",
            "showPrompt": "Show solution",
            "static": false,
            "widgets": {},
          },
          "static": false,
          "type": "explanation",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 1": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**Which shows $\\dfrac29$ decomposed into unit fractions?**

[[☃ radio 1]]

",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "radio 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "choices": [
                    {
                      "clue": undefined,
                      "content": "$\\dfrac19+\\dfrac19$",
                      "correct": true,
                      "isNoneOfTheAbove": undefined,
                      "widgets": undefined,
                    },
                    {
                      "clue": undefined,
                      "content": "$\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12$",
                      "correct": false,
                      "isNoneOfTheAbove": undefined,
                      "widgets": undefined,
                    },
                    {
                      "clue": undefined,
                      "content": "$\\dfrac19+\\dfrac29$",
                      "correct": false,
                      "isNoneOfTheAbove": false,
                      "widgets": undefined,
                    },
                  ],
                  "countChoices": undefined,
                  "deselectEnabled": false,
                  "displayCount": null,
                  "hasNoneOfTheAbove": false,
                  "multipleSelect": false,
                  "noneOfTheAbove": undefined,
                  "onePerLine": true,
                  "randomize": false,
                },
                "static": false,
                "type": "radio",
                "version": {
                  "major": 1,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 2": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**Write an expression showing $\\dfrac53$ decomposed into unit fractions.**

[[☃ expression 1]]



",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "expression 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "answerForms": [
                    {
                      "considered": "correct",
                      "form": true,
                      "key": "0",
                      "simplify": false,
                      "value": "\\frac{1}{3}+\\frac{1}{3}+\\frac{1}{3}+\\frac{1}{3}+\\frac{1}{3}",
                    },
                  ],
                  "ariaLabel": undefined,
                  "buttonSets": [
                    "basic",
                  ],
                  "buttonsVisible": undefined,
                  "functions": [
                    "f",
                    "g",
                    "h",
                  ],
                  "times": false,
                  "visibleLabel": undefined,
                },
                "static": false,
                "type": "expression",
                "version": {
                  "major": 1,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 3": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**What fraction is equal to $\\dfrac16+\\dfrac16+\\dfrac16+\\dfrac16+\\dfrac16$?**

[[☃ numeric-input 1]]



",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "numeric-input 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "answerForms": undefined,
                  "answers": [
                    {
                      "answerForms": [
                        "proper",
                        "improper",
                      ],
                      "maxError": null,
                      "message": "",
                      "simplify": "required",
                      "status": "correct",
                      "strict": false,
                      "value": 0.8333333333333334,
                    },
                  ],
                  "coefficient": false,
                  "labelText": "",
                  "rightAlign": undefined,
                  "size": "normal",
                  "static": false,
                },
                "static": false,
                "type": "numeric-input",
                "version": {
                  "major": 0,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
        "graded-group 4": {
          "alignment": "default",
          "graded": true,
          "key": undefined,
          "options": {
            "content": "**Match each fraction to its equivalent expression.**

[[☃ matcher 1]]



",
            "hasHint": undefined,
            "hint": undefined,
            "images": {},
            "immutableWidgets": undefined,
            "title": "",
            "widgetEnabled": undefined,
            "widgets": {
              "matcher 1": {
                "alignment": "default",
                "graded": true,
                "key": undefined,
                "options": {
                  "labels": [
                    "Fraction",
                    "Expression",
                  ],
                  "left": [
                    "$\\dfrac42$",
                    "$\\dfrac34$",
                    "$\\dfrac23$",
                  ],
                  "orderMatters": false,
                  "padding": true,
                  "right": [
                    "$\\dfrac12+\\dfrac12+\\dfrac12+\\dfrac12$",
                    "$\\dfrac14+\\dfrac14+\\dfrac14$",
                    "$\\dfrac13+\\dfrac13$",
                  ],
                },
                "static": false,
                "type": "matcher",
                "version": {
                  "major": 0,
                  "minor": 0,
                },
              },
            },
          },
          "static": false,
          "type": "graded-group",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
  ],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "",
    "images": {},
    "metadata": undefined,
    "widgets": {},
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/orderer-option-missing-widgets.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
  },
  "hints": [
    {
      "content": "Extinction is a natural process, and the rate of extinction can be determined by studying changes in biodiversity during the history of life on Earth.
",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {
        "orderer 1": {
          "alignment": undefined,
          "graded": true,
          "key": undefined,
          "options": {
            "correctOptions": [
              {
                "content": "$x$",
                "images": {},
                "metadata": undefined,
                "widgets": {},
              },
            ],
            "height": "normal",
            "layout": "horizontal",
            "options": [
              {
                "content": "$x$",
                "images": {},
                "metadata": undefined,
                "widgets": {},
              },
              {
                "content": "$y$",
                "images": {},
                "metadata": undefined,
                "widgets": {},
              },
            ],
            "otherOptions": [
              {
                "content": "$y$",
                "images": {},
                "metadata": undefined,
                "widgets": {},
              },
            ],
          },
          "static": undefined,
          "type": "orderer",
          "version": {
            "major": 0,
            "minor": 0,
          },
        },
      },
    },
    {
      "content": "Humans are causing a current sixth mass extinction event, but are not the only reason species go extinct.",
      "images": {},
      "metadata": undefined,
      "replace": undefined,
      "widgets": {},
    },
  ],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "What is the definition of the natural background rate of extinction? 

![](https://ka-perseus-images.s3.amazonaws.com/1f68a48ffbc7b137e99fbcbb11e9747ae799fe01.jpg)

[[☃ radio 1]]",
    "images": {
      "https://ka-perseus-images.s3.amazonaws.com/1f68a48ffbc7b137e99fbcbb11e9747ae799fe01.jpg": {
        "height": 253,
        "width": 396,
      },
    },
    "metadata": undefined,
    "widgets": {
      "radio 1": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "choices": [
            {
              "clue": undefined,
              "content": "a.	the rate of extinction that balances the rate of speciation",
              "correct": false,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
            {
              "clue": undefined,
              "content": "b.	the average rate at which extinctions have occurred naturally in the geologic past, without human involvement",
              "correct": true,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
            {
              "clue": undefined,
              "content": "c.	the rate of extinction that is currently occurring in protected areas like national parks and marine sanctuaries",
              "correct": false,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
            {
              "clue": undefined,
              "content": "d.	the rate of extinction that can be determined by using Geiger counters and detecting radiation",
              "correct": false,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
          ],
          "countChoices": undefined,
          "deselectEnabled": false,
          "displayCount": null,
          "hasNoneOfTheAbove": undefined,
          "multipleSelect": false,
          "noneOfTheAbove": false,
          "onePerLine": true,
          "randomize": false,
        },
        "static": undefined,
        "type": "radio",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
    },
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/question-missing-content.json 1`] = `
{
  "answer": undefined,
  "answerArea": {},
  "hints": [],
  "itemDataVersion": undefined,
  "question": {
    "content": "",
    "images": {},
    "metadata": undefined,
    "widgets": {},
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/radio-choice-missing-content.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
  },
  "hints": [],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "

[[☃ group 1]]

[[☃ group 2]]

[[☃ group 3]]

[[☃ group 4]]",
    "images": {},
    "metadata": undefined,
    "widgets": {
      "group 1": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "content": "

[[☃ radio 1]]",
          "images": {},
          "metadata": undefined,
          "widgets": {
            "radio 1": {
              "alignment": undefined,
              "graded": true,
              "key": undefined,
              "options": {
                "choices": [
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                ],
                "countChoices": undefined,
                "deselectEnabled": false,
                "displayCount": null,
                "hasNoneOfTheAbove": undefined,
                "multipleSelect": false,
                "noneOfTheAbove": false,
                "onePerLine": true,
                "randomize": false,
              },
              "static": undefined,
              "type": "radio",
              "version": {
                "major": 0,
                "minor": 0,
              },
            },
          },
        },
        "static": undefined,
        "type": "group",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
      "group 2": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "content": "

[[☃ radio 1]]",
          "images": {},
          "metadata": undefined,
          "widgets": {
            "radio 1": {
              "alignment": undefined,
              "graded": true,
              "key": undefined,
              "options": {
                "choices": [
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                ],
                "countChoices": undefined,
                "deselectEnabled": false,
                "displayCount": null,
                "hasNoneOfTheAbove": undefined,
                "multipleSelect": false,
                "noneOfTheAbove": false,
                "onePerLine": true,
                "randomize": false,
              },
              "static": undefined,
              "type": "radio",
              "version": {
                "major": 0,
                "minor": 0,
              },
            },
          },
        },
        "static": undefined,
        "type": "group",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
      "group 3": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "content": "

[[☃ radio 1]]",
          "images": {},
          "metadata": undefined,
          "widgets": {
            "radio 1": {
              "alignment": undefined,
              "graded": true,
              "key": undefined,
              "options": {
                "choices": [
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                ],
                "countChoices": undefined,
                "deselectEnabled": false,
                "displayCount": null,
                "hasNoneOfTheAbove": undefined,
                "multipleSelect": false,
                "noneOfTheAbove": false,
                "onePerLine": true,
                "randomize": false,
              },
              "static": undefined,
              "type": "radio",
              "version": {
                "major": 0,
                "minor": 0,
              },
            },
          },
        },
        "static": undefined,
        "type": "group",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
      "group 4": {
        "alignment": undefined,
        "graded": true,
        "key": undefined,
        "options": {
          "content": "

[[☃ radio 1]]",
          "images": {},
          "metadata": undefined,
          "widgets": {
            "radio 1": {
              "alignment": undefined,
              "graded": true,
              "key": undefined,
              "options": {
                "choices": [
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                  {
                    "clue": undefined,
                    "content": "",
                    "correct": undefined,
                    "isNoneOfTheAbove": undefined,
                    "widgets": undefined,
                  },
                ],
                "countChoices": undefined,
                "deselectEnabled": false,
                "displayCount": null,
                "hasNoneOfTheAbove": undefined,
                "multipleSelect": false,
                "noneOfTheAbove": false,
                "onePerLine": true,
                "randomize": false,
              },
              "static": undefined,
              "type": "radio",
              "version": {
                "major": 0,
                "minor": 0,
              },
            },
          },
        },
        "static": undefined,
        "type": "group",
        "version": {
          "major": 0,
          "minor": 0,
        },
      },
    },
  },
}
`;

exports[`parseAndTypecheckPerseusItem correctly parses data/radio-missing-noneOfTheAbove.json 1`] = `
{
  "answer": undefined,
  "answerArea": {
    "calculator": false,
    "chi2Table": false,
    "periodicTable": false,
    "tTable": false,
    "zTable": false,
  },
  "hints": [],
  "itemDataVersion": {
    "major": 0,
    "minor": 1,
  },
  "question": {
    "content": "$\\begin{align} 
A &= \\{x: x \\text{ is a rectangle in the plane P} \\} \\\\\\\\
B &= \\{x: x \\text{ is a square in the plane P} \\}
\\end{align}$

**Is $A \\subset B$ ?**

[[☃ radio 1]]
",
    "images": {},
    "metadata": undefined,
    "widgets": {
      "radio 1": {
        "alignment": "default",
        "graded": true,
        "key": undefined,
        "options": {
          "choices": [
            {
              "clue": undefined,
              "content": "Yes",
              "correct": false,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
            {
              "clue": undefined,
              "content": "No",
              "correct": true,
              "isNoneOfTheAbove": undefined,
              "widgets": undefined,
            },
          ],
          "countChoices": false,
          "deselectEnabled": false,
          "displayCount": null,
          "hasNoneOfTheAbove": false,
          "multipleSelect": false,
          "noneOfTheAbove": undefined,
          "onePerLine": undefined,
          "randomize": false,
        },
        "static": false,
        "type": "radio",
        "version": {
          "major": 1,
          "minor": 0,
        },
      },
    },
  },
}
`;
